# nex-ledger

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  Dockerfile.prod  INFRASTRUCTURE.md  README.md  STATUS.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml  cd.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_create_currency.py  001_enable_uuid.py  001_enable_uuid_extension.py  002_create_account_type.py  002_create_currency.py  003_create_account_type.py  003_create_tax_rate.py  004_create_business_partner.py  004_create_tax_rate.py  005_create_business_partner.py  005_create_import_batch.py  006_create_chart_of_accounts.py  006_create_import_batch.py  007_create_account.py  007_fix_currency_timestamp_timezone.py  008_create_accounting_period.py  008_create_journal_entry.py  009_create_account.py  00bdf7ca7bbe_create_currency_table.py  010_create_document.py  010_create_journal_entry.py  011_create_journal_entry_line.py  012_create_opening_balance.py  013_create_source_document.py  014_create_document_entry_link.py  0a783d6e8a3f_create_account_type_table.py  0e25eb69840a_create_tax_rate_table.py  8e5b895848e7_create_import_batch_table.py  b4f2e1a9c7d3_audit_warn_fixes.py  cc0db1d86515_create_journal_line.py  d75af6d3cb6f_create_business_partner_table.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  account.py  account_type.py  accounting_period.py  base.py  business_partner.py  chart_of_accounts.py  currency.py  document.py  document_entry_link.py  import_batch.py  journal_entry.py  journal_entry_line.py  journal_line.py  opening_balance.py  source_document.py  tax_rate.py
app/schemas/: __init__.py  account.py  account_type.py  accounting_period.py  business_partner.py  chart_of_accounts.py  common.py  currency.py  document_entry_link.py  import_batch.py  journal_entry.py  opening_balance.py  source_document.py  tax_rate.py
app/services/: __init__.py  account_service.py  account_type_service.py  accounting_period_service.py  business_partner_service.py  chart_of_accounts_service.py  currency_service.py  document_entry_link_service.py  (+5 more)
docker/: init-db.sh
tests/: __init__.py  conftest.py  test_account.py  test_account_type.py  test_business_partner.py  test_currency.py  test_database.py  test_document.py  test_health.py  test_import_batch.py  test_journal_entry.py  test_journal_line.py  test_tax_rate.py
(+47 files in other folders)
