[tool.poetry]
name = "nex-ledger"
version = "0.1.0"
description = "NEX Ledger — Accounting & invoicing system for ICC"
authors = ["ICC s.r.o."]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
pg8000 = "^1.31.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
alembic = "^1.13.0"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.5.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
